--- a/build.gradle
+++ b/build.gradle
@@ -1,11 +1,3 @@
-allprojects {
-    task hello {
-        doLast {
-            task -> println "I'm $task.project.name"
-        }
-    }
-}
-
 subprojects {
     apply plugin: "java"
     sourceCompatibility = '1.10'
@@ -21,5 +13,9 @@ subprojects {
     dependencies {
         testImplementation("org.junit.jupiter:junit-jupiter-api:5.6.2")
         testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:5.6.2")
+    }
+
+    test {
+        useJUnitPlatform()
     }
 }
