--- a/.github/mergify.yml
+++ b/.github/mergify.yml
@@ -2,6 +2,7 @@ pull_request_rules:
   - name: automatic merge when GitHub branch protection passes on master
     conditions:
       - base=master
+      - "#approved-reviews-by>=1"
       - label!=work-in-progress
     actions:
       merge:
