--- a/.github/mergify.yml
+++ b/.github/mergify.yml
@@ -1,7 +1,6 @@
 pull_request_rules:
-  - name: automatic merge when GitHub branch protection passes on master
+  - name: Automatic merge!
     conditions:
-      - base=master
       - "#approved-reviews-by>=1"
       - label!=work-in-progress
     actions:
