--- a/.github/mergify.yml
+++ b/.github/mergify.yml
@@ -1,8 +1,8 @@
 pull_request_rules:
   - name: Automatic merge!
     conditions:
+      - status-success=build
       - "#approved-reviews-by>=1"
-      - label!=work-in-progress
     actions:
       merge:
         method: merge
